--- a/L_2/L_2/Base.lproj/Main.storyboard
+++ b/L_2/L_2/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="280" height="333"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     </view>
-                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q3v-tP-Kn0">
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="Q3v-tP-Kn0">
                                         <rect key="frame" x="0.0" y="390" width="280" height="118"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="6ae-Lf-rfC">
@@ -53,7 +53,7 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="Ygv-Hb-b63">
-                                                <rect key="frame" x="55" y="0.0" width="35" height="118"/>
+                                                <rect key="frame" x="57" y="0.0" width="35" height="118"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="0.00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9ne-cN-be8">
                                                         <rect key="frame" x="0.0" y="0.0" width="35" height="30"/>
@@ -78,17 +78,26 @@
                                                     <constraint firstAttribute="width" constant="35" id="Vkz-3I-3UO"/>
                                                 </constraints>
                                             </stackView>
-                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="center" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="GOp-Sg-gR3">
-                                                <rect key="frame" x="90" y="0.0" width="190" height="118"/>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="14" translatesAutoresizingMaskIntoConstraints="NO" id="GOp-Sg-gR3">
+                                                <rect key="frame" x="94" y="0.0" width="186" height="118"/>
                                                 <subviews>
                                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="KDq-2Z-1qM">
-                                                        <rect key="frame" x="-2" y="0.0" width="194" height="31"/>
+                                                        <rect key="frame" x="-2" y="0.0" width="190" height="31"/>
+                                                        <connections>
+                                                            <action selector="rgbSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="Cju-Sc-bHO"/>
+                                                        </connections>
                                                     </slider>
                                                     <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="ode-Om-5cx">
-                                                        <rect key="frame" x="-2" y="44" width="194" height="31"/>
+                                                        <rect key="frame" x="-2" y="44" width="190" height="31"/>
+                                                        <connections>
+                                                            <action selector="rgbSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="WOs-fh-rAf"/>
+                                                        </connections>
                                                     </slider>
                                                     <slider opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="Daf-ue-yOz">
-                                                        <rect key="frame" x="-2" y="88" width="194" height="31"/>
+                                                        <rect key="frame" x="-2" y="88" width="190" height="31"/>
+                                                        <connections>
+                                                            <action selector="rgbSlider:" destination="BYZ-38-t0r" eventType="valueChanged" id="DqC-N2-3ks"/>
+                                                        </connections>
                                                     </slider>
                                                 </subviews>
                                             </stackView>
@@ -106,6 +115,15 @@
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0gg-s7-cIh" secondAttribute="trailing" constant="20" id="eZf-gq-pLm"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="blueLabel" destination="zxU-KD-Mu6" id="3Pm-kb-275"/>
+                        <outlet property="blueSlider" destination="Daf-ue-yOz" id="3UZ-cT-KrN"/>
+                        <outlet property="colorView" destination="8WR-jy-UxB" id="nND-Ol-MDr"/>
+                        <outlet property="greenLabel" destination="hdW-gz-ZBA" id="Pzq-iz-5Nb"/>
+                        <outlet property="greenSlider" destination="ode-Om-5cx" id="Cbk-EH-Bpq"/>
+                        <outlet property="redLabel" destination="9ne-cN-be8" id="Ekm-Ru-Pk9"/>
+                        <outlet property="redSlider" destination="KDq-2Z-1qM" id="5va-pt-cAc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
